--- a/css/for_author.css
+++ b/css/for_author.css
@@ -3,6 +3,13 @@ html, body, h2, h5, canvas {
     padding: 0;
     border: 0;
 }
+
+body {
+    font-size: revert;
+    text-align: center;
+    height: 100%;
+}
+
 #gall {
     position: relative;
     padding-top: 50%;
@@ -23,27 +30,31 @@ html, body, h2, h5, canvas {
 
 .info {
     position: absolute;
-    top: 550px;
-    left: 78px;
+
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;
     display: inline-block;
-    background-color: #2a2a2a;
+    background-color: #ff4500;
     padding: 10px;
     color: #FFFFFF;
     font-size: 30px;
 }
 .levo{
-position: absolute;
-    top: 590px;
-    left: 100px;
 -webkit-border-radius: 10px;
 -moz-border-radius: 10px;
 border-radius: 10px;
 display: inline-block;
-background-color: #2a2a2a;
+background-color: #ff4500;
 padding: 10px;
-color: #FFFFFF;
+color: white;
 font-size: 30px;}
+
+.bg {
+    background-image: url("./../css/fon1.jpg");
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
