--- a/css/styles-for-bmg.css
+++ b/css/styles-for-bmg.css
@@ -1,7 +1,11 @@
-html, body, h2, canvas {
+html, body, h2{
     margin: 0;
     padding: 0;
     border: 0;
+}
+
+html {
+    height: 100%;
 }
 
 button {
@@ -17,20 +21,12 @@ button {
     font-size: 20px;
     margin: 4px 2px;
     cursor: pointer;
-    background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
-    background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
-    background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
-    background-image: -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
-    background-image: linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
 }
 
 button:hover {
     background-color: #ffbc61;
 }
 
-html {
-    height: 100%;
-}
 
 body {
     font-size: revert;
